Apply the same upgrade of collection instances (from Java 5 to Java 9) as described in the previous commit, but applied to the main code. There are probably different opinions about whether the default methods should be null-strict or null-tolerant, but strictness seems to be the tendency of recent Java evolution. Furthermore, it is less disruptive to be strict at first and relax later if it appears necessary. Since the default methods were not part of GeoAPI 3.0, there is no compatibility issue with this upgrade.