@@ -18,7 +18,6 @@
 package org.opengis.feature;
 
 import java.util.Map;
-import java.util.Collections;
 import org.opengis.annotation.UML;
 import org.opengis.annotation.Stereotype;
 import org.opengis.annotation.Classifier;
@@ -156,7 +155,7 @@ public interface AttributeType<V> extends PropertyType {
      */
     @UML(identifier="characterizeBy", obligation=OPTIONAL, specification=ISO_19109)
     default Map<String,AttributeType<?>> characteristics() {
-        return Collections.emptyMap();
+        return Map.of();
     }
     /*
      * Note: ISO 19109 also defines the following member
