@@ -17,9 +17,8 @@
  */
 package org.opengis.metadata.acquisition;
 
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
-
 import org.opengis.annotation.UML;
 import org.opengis.metadata.Identifier;
 import org.opengis.metadata.citation.Citation;
@@ -45,7 +44,7 @@ public interface Instrument {
      */
     @UML(identifier="citation", obligation=OPTIONAL, specification=ISO_19115_2)
     default Collection<? extends Citation> getCitations() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
