@@ -17,9 +17,8 @@
  */
 package org.opengis.metadata.acquisition;
 
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
-
 import org.opengis.annotation.UML;
 import org.opengis.metadata.Identifier;
 import org.opengis.metadata.citation.Citation;
@@ -72,7 +71,7 @@ public interface Platform {
      */
     @UML(identifier="sponsor", obligation=OPTIONAL, specification=ISO_19115_2)
     default Collection<? extends Responsibility> getSponsors() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
