@@ -17,8 +17,9 @@
  */
 package org.opengis.metadata.citation;
 
+import java.util.Set;
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import java.time.temporal.Temporal;
 import org.opengis.metadata.Identifier;
 import org.opengis.metadata.identification.BrowseGraphic;
@@ -63,7 +64,7 @@ public interface Citation {
      */
     @UML(identifier="alternateTitle", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends InternationalString> getAlternateTitles() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -73,7 +74,7 @@ public interface Citation {
      */
     @UML(identifier="date", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends CitationDate> getDates() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -113,7 +114,7 @@ public interface Citation {
      */
     @UML(identifier="identifier", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Identifier> getIdentifiers() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -126,7 +127,7 @@ public interface Citation {
      */
     @UML(identifier="citedResponsibleParty", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Responsibility> getCitedResponsibleParties() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -137,7 +138,7 @@ public interface Citation {
      */
     @UML(identifier="presentationForm", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<PresentationForm> getPresentationForms() {
-        return Collections.emptySet();                          // Use Set instead of List for hash-safe final classes.
+        return Set.of();
     }
 
     /**
@@ -159,7 +160,7 @@ public interface Citation {
      */
     @UML(identifier="otherCitationDetails", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends InternationalString> getOtherCitationDetails() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -208,7 +209,7 @@ public interface Citation {
      */
     @UML(identifier="onlineResource", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends OnlineResource> getOnlineResources() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -221,6 +222,6 @@ public interface Citation {
      */
     @UML(identifier="graphic", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends BrowseGraphic> getGraphics() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
