@@ -17,8 +17,8 @@
  */
 package org.opengis.metadata.distribution;
 
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import java.time.temporal.TemporalAmount;
 import org.opengis.util.InternationalString;
 import org.opengis.metadata.citation.OnlineResource;
@@ -68,7 +68,7 @@ public interface DigitalTransferOptions {
      */
     @UML(identifier="onLine", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends OnlineResource> getOnLines() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -80,7 +80,7 @@ public interface DigitalTransferOptions {
      */
     @UML(identifier="offLine", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Medium> getOffLines() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -121,6 +121,6 @@ public interface DigitalTransferOptions {
      */
     @UML(identifier="distributionFormat", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Format> getDistributionFormats() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
