@@ -17,8 +17,8 @@
  */
 package org.opengis.metadata.distribution;
 
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.annotation.UML;
 import org.opengis.util.InternationalString;
 
@@ -66,7 +66,7 @@ public interface Distribution {
      */
     @UML(identifier="distributor", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Distributor> getDistributors() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -77,6 +77,6 @@ public interface Distribution {
      */
     @UML(identifier="transferOptions", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends DigitalTransferOptions> getTransferOptions() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
