@@ -18,8 +18,9 @@
 package org.opengis.metadata.identification;
 
 import java.util.Date;
+import java.util.Set;
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.util.InternationalString;
 import org.opengis.temporal.TemporalPrimitive;
 import org.opengis.metadata.citation.Citation;
@@ -76,7 +77,7 @@ public interface Usage {
      */
     @UML(identifier="usageDateTime", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends TemporalPrimitive> getUsageDates() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
@@ -97,7 +98,7 @@ public interface Usage {
      */
     @UML(identifier="userContactInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Responsibility> getUserContactInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -113,7 +114,7 @@ public interface Usage {
      */
     @UML(identifier="response", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends InternationalString> getResponses() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -125,7 +126,7 @@ public interface Usage {
      */
     @UML(identifier="additionalDocumentation", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Citation> getAdditionalDocumentation() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -138,6 +139,6 @@ public interface Usage {
      */
     @UML(identifier="identifiedIssues", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Citation> getIdentifiedIssues() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
