@@ -18,7 +18,6 @@
 package org.opengis.metadata.maintenance;
 
 import java.util.Set;
-import java.util.Collections;
 import org.opengis.annotation.UML;
 import org.opengis.annotation.Classifier;
 import org.opengis.annotation.Stereotype;
@@ -81,7 +80,7 @@ public interface ScopeDescription {
      */
     @UML(identifier="features", obligation=CONDITIONAL, specification=ISO_19115)
     default Set<? extends CharSequence> getFeatures() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
@@ -102,7 +101,7 @@ public interface ScopeDescription {
      */
     @UML(identifier="attributes", obligation=CONDITIONAL, specification=ISO_19115)
     default Set<? extends CharSequence> getAttributes() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
@@ -123,7 +122,7 @@ public interface ScopeDescription {
      */
     @UML(identifier="featureInstances", obligation=CONDITIONAL, specification=ISO_19115)
     default Set<? extends CharSequence> getFeatureInstances() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
@@ -144,7 +143,7 @@ public interface ScopeDescription {
      */
     @UML(identifier="attributeInstances", obligation=CONDITIONAL, specification=ISO_19115)
     default Set<? extends CharSequence> getAttributeInstances() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
